fix(ui): more visible border input in dark mode

--- a/tools/tailwind/style.css
+++ b/tools/tailwind/style.css
@@ -168,7 +168,7 @@
     --nav: 350 50% 40%;
     --elevated: 0 0% 20%;
 
-    --background: 50 20% 15%;
+    --background: 50 20% 13%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -193,7 +193,7 @@
     --warning-foreground: 40 60% 12%;
 
     --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
+    --input: 0 0% 30.0%;
     --ring: 0 0% 83.1%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
